--- a/smacofBA(basics)/smacofBA.tex
+++ b/smacofBA(basics)/smacofBA.tex
@@ -277,9 +277,9 @@
 
 
 \title{Smacof at 50: A Manual\\
-Part 2: The Basics}
+Basics}
 \author{Jan de Leeuw}
-\date{December 8, 2024}
+\date{January 7, 2025}
 
 \begin{document}
 \maketitle
@@ -291,10 +291,11 @@ Part 2: The Basics}
 \tableofcontents
 }
 
-\textbf{Note:} This is a working manuscript which will be
+\textbf{Note:} This manual is a working manuscript which will be
 expanded/updated frequently. All suggestions for improvement are
 welcome. All Rmd, tex, html, pdf, R, and C files are in the public
-domain. Attribution will be appreciated, but is not required. The files
+domain and can be copied, modified, and used by anybody in any way they
+see fit. Attribution will be appreciated, but is not required. The files
 can be found at \url{https://github.com/deleeuw} in the repositories
 smacofCode, smacofManual, and smacofExamples.
 
@@ -379,7 +380,7 @@ dissimilarities. As we have seen, that if some dissimilarities are
 missing metric MDS can handle this by using zero weights. In some
 situations, however, we only know the rank order of the non-missing
 dissimilarities. We do not know, or we refuse to use, their actual
-numeric values. Or, to put it differently, even if we have numerical
+numerical values. Or, to put it differently, even if we have numerical
 dissimilarities we are looking for a \emph{transformation} of the
 non-missing dissimilarities, where the transformation is chosen from a
 set of admissible transformations (for instance from all linear or
@@ -429,7 +430,7 @@ Equation @ref(eq:nstressdef) is only one way to normalize raw stress.
 Some obvious alternatives are discussed in detail in Kruskal and Carroll
 (\citeproc{ref-kruskal_carroll_69}{1969}) and De Leeuw
 (\citeproc{ref-deleeuw_U_75a}{1975}). In the terminology of De Leeuw
-(\citeproc{ref-deleeuw_U_75a}{1975}) there are \emph{explicit} and
+(\citeproc{ref-deleeuw_U_75a}{1975}) there are both \emph{explicit} and
 \emph{implicit} normalizations.
 
 In implicit normalization we minimize either \begin{equation}
@@ -441,7 +442,7 @@ In implicit normalization we minimize either \begin{equation}
 \end{equation} over \(X\) and \(\Delta\in\mathfrak{D}\).
 
 As we have seen, Kruskal (\citeproc{ref-kruskal_64a}{1964a}) chooses
-definition @ref(eq:implicit2) and calls the explicitly normalized loss
+definition @ref(eq:implicit2) and calls the implicitly normalized loss
 function \emph{normalized stress}. Note that we overload the symbol
 \(\sigma\) to denote any one of the least squares loss functions. It
 will always be clear from the text which \(\sigma\) we are talking
@@ -460,6 +461,9 @@ explicit constraint \begin{equation}
 (\citeproc{ref-deleeuw_E_19d}{2019}) show that these four normalizations
 all lead to essentially the same solution for \(X\) and \(\hat D\), up
 to scale factors dictated by the choice of the particular normalization.
+
+explicit derivation
+
 It is also possible to normalize both \(X\) and \(\hat D\), either
 explicitly or implicitly, and again this will give the same solutions,
 suitably normalized. These invariance results assume the admissible
@@ -487,7 +491,8 @@ normalized Kruskal's stress. For the final results the choice between
 normalizations should not make a difference, but the iterative
 computations will be different for the different choices.
 
-\subsection{Some thoughts on ALS}\label{some-thoughts-on-als}
+\subsection{Single-Phase and
+Two-Phase}\label{single-phase-and-two-phase}
 
 The formulation in equations @ref(eq:gmdsdef1) and @ref(eq:gmdsdef2)
 neatly separates the metric MDS part @ref(eq:gmdsdef1) and the
@@ -527,9 +532,6 @@ X^{(k+1)}\in\mathfrak{X}&\ni\{\sigma(X^{(k+1)},\Delta^{(k)})<\sigma(X^{(k)},\Del
 \Delta^{(k+1)}\in\mathfrak{D}&\ni\{\sigma(X^{(k+1)},\Delta^{(k+1)})<\sigma(X^{(k+1)},\Delta^{(k)})\}.
 \end{align}
 \end{subequations}
-
-\subsubsection{The Single-Phase
-approach}\label{the-single-phase-approach}
 
 In Kruskal (\citeproc{ref-kruskal_64a}{1964a}) defines \begin{equation}
 \sigma(X):=\min_{\hat D\in\mathfrak{D}}\ \sigma(\hat D,X)=\sigma(X,\hat D(X)),
@@ -582,8 +584,6 @@ regression} approach, mostly because the rank-image transformations are
 not differentiable, and there is no analog of @ref(eq:partials) and of
 the equivalence of the different implicit and explicit normalizations.
 
-\subsubsection{The Two-Phase Approach}\label{the-two-phase-approach}
-
 The \emph{two-phase approach} or \emph{alternating least squares (ALS)}
 approach alternates minimization of \(\sigma(\hat D,X)\) over \(X\) for
 our current best estimate of \(\hat D\) with minimization of
@@ -621,6 +621,13 @@ phase and several inner iterations in the second phase. How many of
 each, nobody knows. In our current implementation of smacof we take
 several inner iteration steps in the first phase and a single inner
 iteration step in the second phase.
+
+\subsection{Alternative LS Loss
+Functions}\label{alternative-ls-loss-functions}
+
+GL / McGee / Sammon Reverse: \(\sum w_{ij}(\delta_{ij}-f(d_{ij}(X)))^2\)
+or: \(\sum w_{ij}(f(\delta_{ij})-f(d_{ij}(X)))^2\) where \(f\) is known
+or \(f\) is partially known. Power: \(f(x)=x^r\)
 
 \sectionbreak
 
@@ -723,6 +730,19 @@ V^+=(V+\frac{1}{n}ee')^{-1}-\frac{1}{n}ee'
 thus \(V^+=\frac{1}{n}J\). The Guttman transform is then simply
 \(G(X)=n^{-1}B(X)X\).
 
+We have defined stress as a function on \(\mathbb{R}^{n\times p}\), the
+space of \(n\times p\) matrices. For some purposes it is convenient to
+use an alternative, but equivalent, definition of stress on
+\(\mathbb{R}^{np}\), the space of all vectors of length \(np\). Define
+\(\mathfrak{A}_{ij}\) as the direct sum of \(p\) copies of \(A_{ij}\).
+Thus \(\mathfrak{A}_{ij}\) is block-diagonal of order \(np\). Now
+redefine stress as \[
+\sigma(x):=\frac12\mathop{\sum\sum}_{1\leq i<j\leq n}w_{ij}(\delta_{ij}-x'\mathfrak{A}_{ij}x)^2.
+\] \[
+\sigma(x)=1-x'\mathfrak{B}(x)x+\frac12 x'\mathfrak{V}x
+\] where \(\mathfrak{B}(x)\) and \(\mathfrak{V}\) are direct sums of
+\(p\) copies of our previous \(B(X)\) and \(V\).
+
 \section{Intermezzo: Explicit
 Normalization}\label{intermezzo-explicit-normalization}
 
@@ -764,167 +784,7 @@ X=\overline Y+\alpha(Y-\overline Y)
 
 \section{Smacof Algorithm}\label{smacof-algorithm}
 
-\subsection{Introduction to
-Majorization}\label{introduction-to-majorization}
-
-Majorization, these days better known as MM (Lange
-(\citeproc{ref-lange_16}{2016})), is a general approach for the
-construction of minimization algorithms. There is also minorization,
-which leads to maximization algorithms, which explains the MM acronym:
-minorization for maximization and majorization for minimization.
-
-Before the MM principle was formulated as a general approach to
-algorithm construction there were some important predecessors. Major
-classes of MM algorithms avant la lettre were the \emph{EM Algorithm}
-for maximum likelihood estimation of Dempster, Laird, and Rubin
-(\citeproc{ref-dempster_laird_rubin_77}{1977}), the \emph{Smacof
-Algorithm} for MDS of De Leeuw (\citeproc{ref-deleeuw_C_77}{1977}), the
-\emph{Generalized Weiszfeldt Method} of Vosz and Eckhardt
-(\citeproc{ref-vosz_eckhardt_80}{1980}), and the \emph{Quadratic
-Approximation Method} of Böhning and Lindsay
-(\citeproc{ref-boehning_lindsay_88}{1988}). The first formulation of the
-general majorization principle seems to be De Leeuw
-(\citeproc{ref-deleeuw_C_94c}{1994}).
-
-Let's start with a brief introduction to majorization. Minimize a real
-valued function \(\sigma\) over \(x\in\mathbb{S}\), where \(\mathbb{S}\)
-is some subset of \(\mathbb{R}^n\). There are obvious extensions of
-majorization to functions defined on more general spaces, with values in
-any partially ordered set, but we do not need that level of generality
-in this manual. Also majorization applied to \(\sigma\) is minorization
-applied to \(-\sigma\), so concentrating on majorization-minimization
-and ignoring minorization-maximization causes no loss of generality
-
-Suppose there is a real-valued function \(\eta\) on
-\(\mathbb{S}\otimes\mathbb{S}\) such that
-
-\begin{align}
-\sigma(x)&\leq\eta(x,y)\qquad\forall x,y\in\mathbb{S},(\#eq:maj1)\\
-\sigma(x)&=\eta(x,x)\qquad\forall x\in\mathbb{S}.(\#eq:maj2)
-\end{align}
-
-The function \(\eta\) is called a \emph{majorization scheme} for
-\(\sigma\) on \(S\). A majorization scheme is \emph{strict} if
-\(\sigma(x)<\eta(x,y)\) for all \(x,y\in S\) withj \(x\not=y\).
-
-Define \begin{equation}
-x^{(k+1)}\in\mathop{\text{argmin}}_{x\in\mathbb{S}}\eta(x,x^{(k)}),
-(\#eq:majalg)
-\end{equation} assuming that \(\eta(\bullet,y)\) attains its (not
-necessarily unique) minimum over \(x\in\mathbb{S}\) for each \(y\). If
-\(x^{(k)}\in\mathop{\text{argmin}}_{x\in\mathbb{S}}\eta(x,x^{(k)})\)
-then we stop.
-
-By majorization property @ref(eq:maj1) \begin{equation}
-\sigma(x^{(k+1)})\leq\eta(x^{(k+1)},x^{(k)}).
-\end{equation} Because we did not stop update rule @ref(eq:majalg)
-implies \begin{equation}
-\eta(x^{(k+1)},x^{(k)})<\eta(x^{(k)},x^{(k)}).
-\end{equation} and finally by majorization property @ref(eq:maj1)
-\begin{equation}
-\eta(x^{(k)},x^{(k)})=\sigma(x^{(k)}).
-\end{equation}
-
-If the minimum in @ref(eq:majalg) is attained for a unique \(x\) then
-\(\eta(x^{(k+1)},x^{(k)})<\eta(x^{(k)},x^{(k)})\). If the majorization
-scheme is strict then \(\sigma(x^{(k+1)})<\eta(x^{(k+1)},x^{(k)})\).
-Under either of these two additional conditions
-\(\sigma(x^{(k+1)})<\sigma(x^{(k)})\), which means that the majorization
-algorithm is a monotone descent algorithm, and if \(\sigma\) is bounded
-below on \(\mathbb{S}\) the sequence \(\sigma(x^{(k)})\) converges.
-
-Note that we only use the order relation to prove convergence of the
-sequence of function values. To prove convergence of the \(x^{(k)}\) we
-need stronger compactness and continuity assumptions to apply the
-general theory of Zangwill (\citeproc{ref-zangwill_69a}{1969}). For such
-a proof the argmin in update formula @ref(eq:majalg) can be generalized
-to \(x^{(k+1)}=\phi(x^{(k)})\), where \(\phi\) maps \(\mathbb{S}\) into
-\(\mathbb{S}\) such that \(\eta(\phi(x),x)\leq\sigma(x)\) for all \(x\).
-
-We give a small illustration in which we minimize \(\sigma\) with
-\(\sigma(x)=\sqrt{x}-\log{x}\) over \(x>0\). Obviously we do not need
-majorization here, because solving \(\mathcal{D}\sigma(x)=0\)
-immediately gives \(x=4\) as the solution we are looking for.
-
-To arrive at this solution using majorization we start with
-\begin{equation}
-\sqrt{x}\leq\sqrt{y}+\frac12\frac{x-y}{\sqrt{y}},
-(\#eq:sqrtmaj)
-\end{equation} which is true because a differentiable concave function
-such as the square root is majorized by its tangent everywhere.
-Inequality @ref(eq:sqrtmaj) implies \begin{equation}
-\sigma(x)\leq\eta(x,y):=\sqrt{y}+\frac12\frac{x-y}{\sqrt{y}}-\log{x}.
-(\#eq:examplemaj)
-\end{equation} Note that \(\eta(\bullet,y)\) is convex in its first
-argument for each \(y\). We have \(\mathcal{D}_1\eta(x,y)=0\) if and
-only if \(x=2\sqrt{y}\) and thus the majorization algorithm is
-\begin{equation}
-x^{(k+1)}=2\sqrt{x^{(k)}}
-(\#eq:examplealg)
-\end{equation} The sequence \(x^{(k)}\) converges monotonically to the
-fixed point \(x=2\sqrt{x}\), i.e.~to \(x=4\). If \(x^{(0)}<4\) the
-sequence is increasing, if \(x^{(0)}<4\) it is decreasing. Also, by
-l'Hôpital, \begin{equation}
-\lim_{x\rightarrow 4}\frac{2\sqrt{x}-4}{x-4}=\frac12
-(\#eq:hopi1)
-\end{equation} and thus convergence to the minimizer is linear with
-asymptotic convergence rate \(\frac12\). By another application of
-l'Hôpital \begin{equation}
-\lim_{x\rightarrow 4}\frac{\sigma(2\sqrt{x)})-\sigma(4)}{\sigma(x)-\sigma(4)}=\frac14,
-(\#eq:hopi2)
-\end{equation} and convergence to the minimum is linear with asymptotic
-convergence rate \(\frac14\). Linear convergence to the minimizer is
-typical for majorization algorithms, as is the twice-as-fast linear
-convergence to the minimum value.
-
-This small example is also of interest, because we minimize a \emph{DC
-function}, the difference of two convex functions. In our example the
-convex functions are minus the square root and minus the logarithm.
-Algorithms for minimizing DC functions define other important subclasses
-of MM algorithms, the \emph{DC Algorithm} of Tao Pham Dinh (see Le Thi
-and Tao (\citeproc{ref-lethi_tao_18}{2018}) for a recent overview), the
-\emph{Concave-Convex Procedure} of Yuille and Rangarajan
-(\citeproc{ref-yuille_rangarajan_03}{2003}), and the
-\emph{Half-Quadratic Method} of Donald Geman (see Niikolova and Ng
-(\citeproc{ref-nikolova_ng_05}{2005}) for a recent overview). For each
-of these methods there is a huge literature, with surprisingly little
-non-overlapping literatures. The first phase of the smacof algorithm, in
-which we improve the configuration for given disparities, is DC,
-concave-convex, and half-quadratic.
-
-In the table below we show convergence of @ref(eq:examplealg) starting
-at \(x=1.5\). The first column show how far \(x^{(k)}\) deviates from
-the minimizer (i.e.~from 4), the second shows how far\(\sigma(x^{(k)})\)
-deviates from the minimum (i.e.~from \(2-\log 4\)). We clearly see the
-convergence rates \(\frac12\) and \(\frac14\) in action.
-
-\begin{verbatim}
-itel   1 2.5000000000 0.2055741244 
-itel   2 1.5505102572 0.0554992066 
-itel   3 0.8698308399 0.0144357214 
-itel   4 0.4615431837 0.0036822877 
-itel   5 0.2378427379 0.0009299530 
-itel   6 0.1207437506 0.0002336744 
-itel   7 0.0608344795 0.0000585677 
-itel   8 0.0305337787 0.0000146606 
-itel   9 0.0152961358 0.0000036675 
-itel  10 0.0076553935 0.0000009172 
-itel  11 0.0038295299 0.0000002293 
-itel  12 0.0019152235 0.0000000573 
-itel  13 0.0009577264 0.0000000143 
-itel  14 0.0004788919 0.0000000036 
-itel  15 0.0002394531 0.0000000009 
-\end{verbatim}
-
-The first three iterations are shown in the figure below. The vertical
-lines indicate the value of \(x\), function is in red, and the first
-three majorizations are in blue.
-
-\begin{center}
-\pandocbounded{\includegraphics[keepaspectratio]{smacofBA_files/figure-pdf/majplot-1.pdf}}
-\end{center}
-
-\subsubsection{Majorizing Stress}\label{majorizing-stress}
+\subsubsection{Majorizing Raw Stress}\label{majorizing-raw-stress}
 
 \[
 \sigma(X)=\frac12\sum w_{ij}(\delta_{ij}-d_{ij}(X))^2=1-\rho(X)+\frac12\eta^2(X)
@@ -962,6 +822,9 @@ d_{ij}(X)\geq b_{ij}\ \text{tr}\ X'A_{ij}Y=0
 \[
 X^+=\frac12(1+\beta)\overline{X}+\frac12(1-\beta)X
 \] Regular smacof \(\beta = 1\). Accelerated \(\beta=3\)
+
+\subsection{Majorizing Normalized
+Stress}\label{majorizing-normalized-stress}
 
 \subsection{Stress formula two}\label{stress-formula-two}
 
@@ -1009,8 +872,8 @@ The functions in the R files that I wrote are all called smacofFoo,
 using Camel Case, where Foo is something more or less descriptive of
 what the function is doing. Of course functions that come with R, or
 with packages written by others, keep their original names. Plots are
-made in ggplot2 ((\citeproc{ref-wickham_}{\textbf{wickham\_?}})), the
-manual is written in quarto ().
+made in ggplot2 (Wickham (\citeproc{ref-wickham_16}{2016})), the manual
+is written in quarto ().
 
 Each chapter of the manual has one main function implementing the
 technique discussed in the chapter. Since the programs share a lot of
@@ -1019,7 +882,7 @@ operations. For my private use the code for each chapter is compiled
 into a barebones R package.
 
 Almost all programs contain what I call a ``partial iterator''. It is a
-piece of code that performs iterations and that looks like
+piece of code that performs iterations and that looks like ::: \{.cell\}
 
 \begin{Shaded}
 \begin{Highlighting}[]
@@ -1052,13 +915,13 @@ piece of code that performs iterations and that looks like
 \end{Highlighting}
 \end{Shaded}
 
-Partial iterators can, and often are, nested, so there are outer, inner,
-innermost and so on iterations. Iterators test for convergence, but in
-inner iterations they are often called with a small value of itmax, so
-they only perform a small number of iterations. They merely improve
-their objective, they do not go all the way to the optimum or fixed
-point. Many of the iterators depend on alternating least squares (De
-Leeuw (\citeproc{ref-deleeuw_C_94c}{1994})). majorization (De Leeuw
+::: Partial iterators can, and often are, nested, so there are outer,
+inner, innermost and so on iterations. Iterators test for convergence,
+but in inner iterations they are often called with a small value of
+itmax, so they only perform a small number of iterations. They merely
+improve their objective, they do not go all the way to the optimum or
+fixed point. Many of the iterators depend on alternating least squares
+(De Leeuw (\citeproc{ref-deleeuw_C_94c}{1994})). majorization (De Leeuw
 (\citeproc{ref-deleeuw_C_94c}{1994})), or MM (Lange
 (\citeproc{ref-lange_16}{2016})) to compute these improvements
 
@@ -1073,11 +936,6 @@ Leeuw (\citeproc{ref-deleeuw_C_94c}{1994})). majorization (De Leeuw
 Bauschke, H. H., M. N. Bui, and X. Wang. 2018. {``{Projecting onto the
 Intersection of a Cone and a Sphere}.''} \emph{SIAM Journal on
 Optimization} 28: 2158--88.
-
-\bibitem[\citeproctext]{ref-boehning_lindsay_88}
-Böhning, D., and B. G. Lindsay. 1988. {``{Monotonicity of
-Quadratic-approximation Algorithms}.''} \emph{Annals of the Institute of
-Statistical Mathematics} 40 (4): 641--63.
 
 \bibitem[\citeproctext]{ref-borg_groenen_05}
 Borg, I., and P. J. F. Groenen. 2005. \emph{Modern Multidimensional
@@ -1141,11 +999,6 @@ De Leeuw, J., and P. Mair. 2009. {``{Multidimensional Scaling Using
 Majorization: SMACOF in R}.''} \emph{Journal of Statistical Software} 31
 (3): 1--30. \url{https://www.jstatsoft.org/article/view/v031i03}.
 
-\bibitem[\citeproctext]{ref-dempster_laird_rubin_77}
-Dempster, A. P., N. M. Laird, and D. B. Rubin. 1977. {``{Maximum
-Likelihood for Incomplete Data via the EM Algorithm}.''} \emph{Journal
-of the Royal Statistical Society} B39: 1--38.
-
 \bibitem[\citeproctext]{ref-groenen_vandevelden_16}
 Groenen, P. J. F., and M. Van de Velden. 2016. {``{Multidimensional
 Scaling by Majorization: A Review}.''} \emph{Journal of Statistical
@@ -1175,20 +1028,11 @@ Company.
 \bibitem[\citeproctext]{ref-lange_16}
 Lange, K. 2016. \emph{MM Optimization Algorithms}. SIAM.
 
-\bibitem[\citeproctext]{ref-lethi_tao_18}
-Le Thi, H. A., and P. D. Tao. 2018. {``{DC Programming and DCA: Thirty
-Years of Developments}.''} \emph{Mathematical Programming, Series B}.
-
 \bibitem[\citeproctext]{ref-mair_groenen_deleeuw_A_22}
 Mair, P., P. J. F. Groenen, and J. De Leeuw. 2022. {``{More on
 Multidimensional Scaling in R: smacof Version 2}.''} \emph{Journal of
 Statistical Software} 102 (10): 1--47.
 \url{https://www.jstatsoft.org/article/view/v102i10}.
-
-\bibitem[\citeproctext]{ref-nikolova_ng_05}
-Niikolova, M., and M. Ng. 2005. {``Analysis of Half-Quadratic
-Minimization Methods for Signal and Image Recovery.''} \emph{SIAM
-Journal Scientific Computing} 27 (3): 937--66.
 
 \bibitem[\citeproctext]{ref-r_core_team_24}
 R Core Team. 2024. \emph{R: A Language and Environment for Statistical
@@ -1209,9 +1053,9 @@ Scaling with an Unknown Distance Function. II}.''} \emph{Psychometrika}
 Torgerson, W. S. 1952. {``{Multidimensional Scaling: I. Theory and
 Method}.''} \emph{Psychometrika} 17 (4): 401--19.
 
-\bibitem[\citeproctext]{ref-vosz_eckhardt_80}
-Vosz, H., and U. Eckhardt. 1980. {``{Linear Convergence of Generalized
-{W}eiszfeld's Method}.''} \emph{Computing} 25: 243--51.
+\bibitem[\citeproctext]{ref-wickham_16}
+Wickham, H. 2016. \emph{{ggplot2. Elegant Graphics fopr Data Analysis}}.
+Use r! Springer.
 
 \bibitem[\citeproctext]{ref-young_81}
 Young, F. W. 1981. {``{Quantitative Analysis of Qualitative Data}.''}
@@ -1222,14 +1066,6 @@ Young, F. W., J. De Leeuw, and Y. Takane. 1980. {``Quantifying
 Qualitative Data.''} In \emph{Similarity and Choice. Papers in Honor of
 Clyde Coombs}, edited by E. D. Lantermann and H. Feger. Bern: Hans
 Huber.
-
-\bibitem[\citeproctext]{ref-yuille_rangarajan_03}
-Yuille, A. L., and A. Rangarajan. 2003. {``{The Concave-Convex
-Procedure}.''} \emph{Neural Computation} 15: 915--36.
-
-\bibitem[\citeproctext]{ref-zangwill_69a}
-Zangwill, W. I. 1969. \emph{{Nonlinear Programming: a Unified
-Approach}}. Englewood-Cliffs, N.J.: Prentice-Hall.
 
 \end{CSLReferences}
 
