--- a/smacofIntro(introduction)/smacofIntro.qmd
+++ b/smacofIntro(introduction)/smacofIntro.qmd
@@ -47,13 +47,7 @@ suppressPackageStartupMessages (library (knitr, quietly = TRUE))
 ```
 \sectionbreak
 
-**Note:** This manual is a working manuscript which will be expanded/updated
-frequently. All suggestions for improvement are welcome. All Rmd, tex,
-html, pdf, R, and C files are in the public domain and can be copied, modified,
-and used by anybody in any way they see fit. Attribution will be
-appreciated, but is not required. The files can be found at
-<https://github.com/deleeuw> in the repositories smacofCode, smacofManual,
-and smacofExamples.
+**Note:** This manual is a working manuscript which will be expanded/updated frequently. All suggestions for improvement are welcome. All Rmd, tex, html, pdf, R, and C files are in the public domain and can be copied, modified, and used by anybody in any way they see fit. Attribution will be appreciated, but is not required. The files can be found at <https://github.com/deleeuw> in the repositories smacofCode, smacofManual, and smacofExamples.
 
 \sectionbreak
 
@@ -302,8 +296,6 @@ knitr::include_graphics("graphics/lajolla_08_75.png")
 
 \sectionbreak
 
-# Introduction {#intro}
-
 In this manual we study the smacof family of *Multidimensional Scaling (MDS)* techniques. 
 In MDS the data consist of some type of information about the *dissimilarities* between a pairs of *objects*. These objects can be anything: individuals, variables, colors, 
 locations, chemicals, molecules, works of Plato, political parties, Morse code signals, and so on. The dissimilarities can be approximate or imprecise distances, dissimilarity judgments, import/export tables, sociometric choices, and so on. They generally are *distance-like*, but we do not expect them to satisfy
@@ -335,7 +327,7 @@ distances are. So MDS finds $X$ such that $D(X)\approx\Delta$.
 
 For numerical dissimilarities it is clear what "approximation" means, we simply want the distances and the corresponding dissimilarities to be numerically close. Because there are generally many dissimilarities and distances a combined measure of closeness can still be defined in many different ways. For ordinal and nominal dissimilarities the notion of approximation is less clear, and we have to develop more specialized techniques to measure how well the distances fit the dissimilarities.
 
-## Brief History {#introhist}
+# Brief History {#introhist}
 
 @deleeuw_heiser_C_80
 
@@ -344,11 +336,44 @@ This is reviewed ably in the presidential address of @torgerson_65.
 
 Our history review takes the form of brief summaries of what we consider to be milestone papers or books.
 
-### Milestones
+## Prehistory
 
+The prehistory of MDS is defined as any publication before @young_householder_38.
+
+stumpf 1883
+
+>Unter Distanzen aber verstehen wir, das Wort hier ebenfalls in einem
+für Manche ungewohnt weiten Sinne nehmend, nicht blos räumliche und zeitliche sondern auch qualitative und solche der Intensität, und definieren das Wort durch: Grade der Unähnlichkeit.
+
+From the translation 
+
+>Taking the word “distances” in a sense uncommonly broad for many, however, we mean here not only spatial and temporal ones, but also qualitative ones as well as ones of intensity, and define the word by degrees of dissimilarity.
+
+
+fisher 1922
+boyden 1932/1935
+goldmeier 1937
+
+richardson 1938
+klingberg 1941
+gulliksen 1946
+attneave 1950
+ekman 1954
+
+torgerson 1951
+torgerson 1952
+messick_abelson 1956
+
+reviewed in @deleeuw_heiser_C_80. 
+
+Young-Householder, etc.
+
+## Torgerson
 
 @torgerson_52
 @torgerson_65
+
+## Bell Laboratories
 
 @shepard_62a
 @shepard_62b
@@ -356,7 +381,13 @@ Our history review takes the form of brief summaries of what we consider to be m
 @kruskal_64a
 @kruskal_64b
 
+## Guttman-Lingoes
+
 @guttman_68
+
+## Alternating Least Squares
+
+## Majorization
 
 @deleeuw_C_77
 @deleeuw_heiser_C_77
@@ -397,13 +428,12 @@ The main development in comptational MDS after the Bell Laboratories surge was p
 Later it was also used to mean 
 *Scaling by Majorizing a Complicated Function*. Whatever. In this book smacof just stands for smacof. No italics, no boldface, no capitals.
 
-The first smacof programs were written in 1977 in FORTRAN at the Department of Data Theory in Leiden (@heiser_deleeuw_R_77). Eventually they migrated to SPSS (for example, @meulman_heiser_12) and to R (@deleeuw_mair_A_09c). The SPSS branch and the R branch have diverged somewhat, and they continue to be developed independently.
+The first smacof programs were written in 1977 in FORTRAN at the Department of Data Theory in Leiden (@heiser_deleeuw_R_77). Eventually they migrated to SPSS (for example, @meulman_heiser_12) and to R (@deleeuw_mair_A_09c). The SPSS branch, now the IBM SPSS branch, and the R branch have diverged somewhat, and they continue to be developed independently.
 
-Parallel to this book there is an attempt to rewrite the various smacof
-programs in C, with the necessary wrappers to call them from R (@deleeuw_E_17p). The C code, with makefiles and test routines, is at 
+Parallel to this book there is an attempt to rewrite the various smacof programs in C, with the necessary wrappers to call them from R (@deleeuw_E_17p). The C code, with makefiles and test routines, is at 
 [github.com/deleeuw/smacof](https://github.com/deleeuw/smacof)
 
-## Basic MDS {#introbasic}
+# Basic MDS {#introbasic}
 
 Following Kruskal, and to a lesser extent Shepard, we measure the fit of distances to dissimilarities using an explicit real-valued *loss function* (or
 *badness-of-fit measure*), which is minimized over the possible maps of
@@ -479,7 +509,7 @@ The projections on the dimensions are usually ignored, it is the configuration o
 There is no Varimax, Oblimax, Quartimax, and so on. Exceptions are confirmatory applications of MDS in genetic mapping along the chromosome, in archeological seriation, in testing psychological theories of cognition and representation, in the conformation of molecules, and in geographic and geological applications. In these areas the dimensionality and general structure of the configuration are given by prior knowledge, we just do not know the precise location and distances of the points. For more discussion of the different uses of MDS we refer to @deleeuw_heiser_C_82.
 
 
-### Kruskal's stress
+## Kruskal's stress
 
 Definition \@ref(eq:stressall) differs from Kruskal's original stress in at least three ways: in Kruskal's use of the square root, in our use of weights, and in our different approach to normalization.
 
@@ -532,7 +562,7 @@ Using normalized dissimilarities amounts to the same defining stress as
 
 This is useful to remember when we discuss the various normalizations for non-metric MDS in section \@ref(nmdsnorm).
 
-## Local and Global {#seclocglob}
+## Local and Global Minima {#seclocglob}
 
 In basic MDS our goal is to compute both $\min_X\sigma(X)$ and $\mathop{\text{Argmin}}_X\sigma(X)$, where $\sigma(X)$ is defined as 
 \@ref(eq:stressall), and where we minimize over all configurations in
@@ -546,13 +576,15 @@ Emphasis local minima
 
 Compute stationary points
 
-Note we use the notation $\mathop{\text{Argmin}}_{x\in X}f(x)$ for the set of minimizers of $f$ over $X$. Thus $z\in\mathop{\text{Argmin}}_{x\in X}f(x)$ means $z$ minimizes $f$ over $X$, i.e. $f(z)=\min_{x\in X} f(x)$. If it is clear from theory that the minimum is necessarily unique, we use $\text{argmin}$ instead of $\text{Argmin}$.
+## Partitioning Loss
 
-## Generalizations {#introgeneralize}
+# Generalizations {#introgeneralize}
 
 The most important generalizations of basic MDS we will study in later chapters of this book are discussed briefly in the following sections.
 
-### Non-metric MDS {#gennonmetric}
+## Non-linear MDS
+
+## Non-metric MDS {#gennonmetric}
 
 Basic MDS is a form of *Metric Multidimensional Scaling* or
 *MMDS*, in which dissimilarities are either known or missing. In chapter \@ref(nonmtrmds) we relax this assumption. Dissimilarities may be partly known, for example we may know they are in some interval, we may only know their order, or we may know them up to some smooth transformation. MDS with partly known dissimilarities is *Non-metric Multidimensional Scaling* or *NMDS*. Completely unknown (missing) dissimilarities are an exception, because we can just handle this in basic MDS by setting the corresponding weights equal to zero.
@@ -565,16 +597,14 @@ It is perhaps useful to remember that @kruskal_64a introduced explicit loss func
 
 It may be the case that in the social and behavioural sciences only the ordinal information in the dissimilarities is reliable and useful. But, since 1964, MDS has also been applied in molecular conformation, chemometrics, genetic sequencing, archelogical seriation, and in network design and location analysis. In these areas the numerical information in the dissimilarities is usually meaningful and should not be thrown out right away. Also, the use of the Shepard plot, with dissimilarities on the horizontal axis and fitted distances on the vertical axis, suggests there is more to dissimilarities than just their rank order.
 
-### fstress {#genfstress}
+## Fstress and Friends {#genfstress}
 
-Instead of defining the residuals in the least squares loss function as $\delta_{ij}-d_{ij}(X)$ chapter \@ref(chrstress) discusses the more general cases where the residuals are $f(\delta_{ij})-f(d_{ij}(X))$ for some known non-negative increasing function $f$. This defines the *fstress* loss function.
+Instead of defining the residuals in the least squares loss function as $\delta_{ij}-d_{ij}(X)$ chapter \@ref(chrstress) discusses the more general cases where the residuals are $f(\delta_{ij})-g(d_{ij}(X))$ for some known non-negative increasing function $f$. This defines the *fstress* loss function.
 
 If $f(x)=x^r$ with $r>0$ then fstress is called *rstress*. Thus stress is rstress with $r=1$, also written as *1stress* or $\sigma_1$. In more detail we will also look at
-$r=2$, which is called *sstress* by @takane_young_deleeuw_A_77. In chapter \@ref(chsstressstrain) we look at the problem of minimizing sstress and weighted version
-*strain*. The case of rstress with $r\rightarrow 0$ is also of interest, because it
-leads to the loss function in @ramsay_77.
+$r=2$, which is called *sstress* by @takane_young_deleeuw_A_77. In chapter \@ref(chsstressstrain) we look at the problem of minimizing sstress and weighted version *strain*. The case of rstress with $r\rightarrow 0$ is also of interest, because it leads to the loss function in @ramsay_77.
     
-### Constraints {#gencons}
+## Constraints {#gencons}
 
 Instead of minimizing stress over all $X$ in
 $\mathbb{R}^{n\times p}$ we will look in chapter \@ref(cmds) at various generalizations where minimization is over a subset $\mathcal{\Omega}$ of
@@ -585,6 +615,8 @@ trade-off does not seem to apply directly, because the necessary replication fra
 
 and we do not attach much value to locating the true configuration.
 
+Primal and Dual
+
 $$
 \min_{X\in\Omega}\sigma(X)
 $$
@@ -594,7 +626,7 @@ $$
 $$
 where $\kappa(X,\Omega)\geq 0$ and $\kappa(X,\Omega)=0$ if and only if $X\in\Omega$.
 
-### Individual Differences {#inreplic}
+## Individual Differences {#inreplic}
 
 Now consider the situation in which we have $m$ different dissimilarity matrices
 $\Delta_k$ and $m$ different weight matrices $W_k$. We generalize basic MDS by defining
@@ -616,13 +648,183 @@ Minimizing \@ref(eq:replistress) becomes more interesting if we constrain the $X
 by making sure they have a component that is common to all $k$ and a component that is
 specific or unique to each $k$. This approach, which generalizes constrained MDS, is discussed in detail in chapter \@ref(chindif).
 
-### Distance Asymmetry {#genasym}
+## Asymmetry {#genasym}
 
 We have seen in section \@ref(datasym) of this chapter that in basic MDS the assumption that $W$ and $\Delta$ are symmetric and hollow can be made without loss of generality. The simple partitioning which proved this was based on the fact that $D(X)$ is always symmetric and hollow. By the way, the assumption that $W$ and $D$ are non-negative cannot be made without loss of generality, as we will see below.
 
 In chapter \@ref(asymmds) we relax the assumption that $D(X)$ is symmetric (still requiring it to be non-negative and hollow). This could be called *Asymmetric MDS*, or *AMDS*. I was reluctant at first to include this chapter, because asymmetric distances do not exist. And certainly are not Euclidean distances, so they are not covered by the title of this book. But as long as we stay close to Euclidean distances, least squares, and the smacof approach, I now feel reasonably confident the chapter is not too much of a foreign body.
 
+## Non-Euclidean Distances
+
 When Kruskal introduced gradient-based methods to minimize stress he also discussed the possibility to use Minkovski metrics other than the Euclidean metric. This certainly was part of the appeal of the new methods, in fact it seemed as if the gradient methods made it possible to use any distance function whatsoever. This initial feeling of empowerment was somewhat naive, because it ignored the seriousness of the local minimum problem, the combinatorial nature of one-dimensional and city block scaling, the problems with nonmetric unfolding, and the problematic nature of gradient methods if the distances are not everywhere differentiable. All these complications will be discussed in this book. But it made me decide to ignore Minkovski distances (and hyperbolic and elliptic non-Euclidean distances), because life with stress is complicated and challenging enough as it is.
+
+@groenen_mathar_heiser_95, @mathar_meyer_94
+
+# Principles of Algorithm Constuction
+
+## Alternating Least Squares
+
+## Majorization
+
+## Introduction to Majorization
+
+Majorization, these days better known as MM (@lange_16), is a general
+approach for the construction of minimization algorithms. There is also
+minorization, which leads to maximization algorithms, which explains the
+
+MM acronym: minorization for maximization and majorization for
+minimization.
+
+Before the MM principle was formulated as a general approach to
+algorithm construction there were some important predecessors. Major
+classes of MM algorithms avant la lettre were the EM Algorithm for
+maximum likelihood estimation of @dempster_laird_rubin_77, the *Smacof
+Algorithm* for MDS of @deleeuw_C_77, the Generalized Weiszfeldt Method*
+of @vosz_eckhardt_80, and the Quadratic Approximation Method of
+@boehning_lindsay_88. The first formulation of the general majorization
+principle seems to be @deleeuw_C_94c.
+
+Let's start with a brief introduction to majorization. Minimize a real
+valued function $\sigma$ over $x\in\mathbb{S}$, where $\mathbb{S}$ is
+some subset of $\mathbb{R}^n$. There are obvious extensions of
+majorization to functions defined on more general spaces, with values in any partially ordered set, but we do not need that level of generality in this manual. Also majorization applied to $\sigma$ is minorization applied to $-\sigma$, so concentrating on majorization-minimization and ignoring minorization-maximization causes no loss of generality
+
+Suppose there is a real-valued function $\omega$ on
+$\mathbb{S}\otimes\mathbb{S}$ such that
+\begin{align}
+\sigma(x)&\leq\omega(x,y)\qquad\forall x,y\in\mathbb{S},\label{eq-maj1}\\
+\sigma(x)&=\omega(x,x)\qquad\forall x\in\mathbb{S}.\label{eq-maj2}
+\end{align}
+The function $\omega$ is called a *majorization scheme* for $\sigma$ on
+$S$. A majorization scheme is *strict* if $\sigma(x)<\omega(x,y)$ for all
+$x,y\in S$ withj $x\not=y$.
+
+Define 
+$$
+x^{(k+1)}\in\mathop{\text{argmin}}_{x\in\mathbb{S}}\omega(x,x^{(k)}),
+$${#eq-majalg}
+assuming that $\omega$ attains its (not
+necessarily unique) minimum over $x\in\mathbb{S}$ for each $y$. If
+$x^{(k)}\in\mathop{\text{argmin}}_{x\in\mathbb{S}}\omega(x,x^{(k)})$ 
+then we stop.
+
+By majorization property \eqref{eq-maj1}
+$\sigma(x^{(k+1)})\leq\omega(x^{(k+1)},x^{(k)})$.
+Because we did not stop update rule @eq-majalg implies 
+$\omega(x^{(k+1)},x^{(k)})<\omega(x^{(k)},x^{(k)})$.
+and finally by majorization property \eqref{eq-maj2}
+$\omega(x^{(k)},x^{(k)})=\sigma(x^{(k)})$.
+
+If the minimum in @eq-majalg is attained for a unique $x$ then
+$\omega(x^{(k+1)},x^{(k)})<\omega(x^{(k)},x^{(k)})$. If the majorization
+scheme is strict then $\sigma(x^{(k+1)})<\omega(x^{(k+1)},x^{(k)})$. Under either of these two additional conditions
+$\sigma(x^{(k+1)})<\sigma(x^{(k)})$, which means that the majorization
+algorithm is a monotone descent algorithm, and if $\sigma$ is bounded
+below on $\mathbb{S}$ the sequence $\sigma(x^{(k)})$ converges.
+
+Note that we only use the order relation to prove convergence of the
+sequence of function values. To prove convergence of the $x^{(k)}$ we
+need stronger compactness and continuity assumptions to apply the
+general theory of @zangwill_69a. For such a proof the argmin in update
+formula @eq-majalg can be generalized to
+$x^{(k+1)}=\phi(x^{(k)})$, where $\phi$ maps $\mathbb{S}$ into
+$\mathbb{S}$ such that $\omega(\phi(x),x)\leq\sigma(x)$ for all $x$.
+
+We give a small illustration in which we minimize $\sigma$ with
+$\sigma(x)=\sqrt{x}-\log{x}$ over $x>0$. Obviously we do not need
+majorization here, because solving $\mathcal{D}\sigma(x)=0$ immediately
+gives $x=4$ as the solution we are looking for.
+
+To arrive at this solution using majorization we start with
+\begin{equation}
+\sqrt{x}\leq\sqrt{y}+\frac12\frac{x-y}{\sqrt{y}},
+(\#eq:sqrtmaj)
+\end{equation} 
+which is true because a differentiable concave function
+such as the square root is majorized by its tangent everywhere.
+Inequality \@ref(eq:sqrtmaj) implies \begin{equation}
+\sigma(x)\leq\eta(x,y):=\sqrt{y}+\frac12\frac{x-y}{\sqrt{y}}-\log{x}.
+(\#eq:examplemaj)
+\end{equation} Note that $\eta(\bullet,y)$ is convex in its first
+argument for each $y$. We have $\mathcal{D}_1\eta(x,y)=0$ if and only if
+$x=2\sqrt{y}$ and thus the majorization algorithm is \begin{equation}
+x^{(k+1)}=2\sqrt{x^{(k)}}
+(\#eq:examplealg)
+\end{equation} The sequence $x^{(k)}$ converges monotonically to the
+fixed point $x=2\sqrt{x}$, i.e. to $x=4$. If $x^{(0)}<4$ the sequence is
+increasing, if $x^{(0)}<4$ it is decreasing. Also, by l'Hôpital,
+\begin{equation}
+\lim_{x\rightarrow 4}\frac{2\sqrt{x}-4}{x-4}=\frac12
+(\#eq:hopi1)
+\end{equation} and thus convergence to the minimizer is linear with
+asymptotic convergence rate $\frac12$. By another application of
+l'Hôpital \begin{equation}
+\lim_{x\rightarrow 4}\frac{\sigma(2\sqrt{x)})-\sigma(4)}{\sigma(x)-\sigma(4)}=\frac14,
+(\#eq:hopi2)
+\end{equation} and convergence to the minimum is linear with asymptotic
+convergence rate $\frac14$. Linear convergence to the minimizer is
+typical for majorization algorithms, as is the twice-as-fast linear
+convergence to the minimum value.
+
+This small example is also of interest, because we minimize a *DC
+function*, the difference of two convex functions. In our example the
+convex functions are minus the square root and minus the logarithm.
+Algorithms for minimizing DC functions define other important subclasses
+of MM algorithms, the *DC Algorithm* of Tao Pham Dinh (see @lethi_tao_18
+for a recent overview), the *Concave-Convex Procedure* of
+@yuille_rangarajan_03, and the *Half-Quadratic Method* of Donald Geman
+(see @nikolova_ng_05 for a recent overview). For each of these methods
+there is a huge literature, with surprisingly little non-overlapping
+literatures. The first phase of the smacof algorithm, in which we
+improve the configuration for given disparities, is DC, concave-convex,
+and half-quadratic.
+
+In the table below we show convergence of \@ref(eq:examplealg) starting
+at $x=1.5$. The first column show how far $x^{(k)}$ deviates from the
+minimizer (i.e. from 4), the second shows how far$\sigma(x^{(k)})$
+deviates from the minimum (i.e. from $2-\log 4$). We clearly see the
+convergence rates $\frac12$ and $\frac14$ in action.
+
+```{r majiter, echo = FALSE}
+x <- 1.5
+f <- sqrt(x) - log(x)
+f0 <- 2 - log(4)
+for (i in  1:15) {
+  cat("itel ", formatC(i, digits = 0, width = 2, format = "d"),
+      formatC(4 - x, digits = 10, format = "f"),
+      formatC(f - f0, digits = 10, format = "f"),
+      "\n")
+  x <- 2 * sqrt(x)
+  f <- sqrt(x) - log(x)
+}
+```
+
+The first three iterations are shown in the figure below. The vertical
+lines indicate the value of $x$, function is in red, and the first three
+majorizations are in blue.
+
+```{r majplot, fig.align = "center", echo = FALSE}
+x <- 100:500/100
+y <- sqrt(x) - log(x)
+plot(x, y, type = "l", lwd = 3, col = "RED")
+g <- function(x, y) {
+return(sqrt(y)+ (x - y) / (2 * sqrt(y)) - log(x))
+}
+x1 <- 1.5
+abline(v = x1)
+z1 <- g(x, x1)
+lines(x, z1, col = "BLUE")
+x2 <- 2 * sqrt(x1)
+abline(v = x2)
+z2 <- g(x, x2)
+lines(x, z2, col = "BLUE")
+x3 <- 2 * sqrt(x2)
+abline(v = x3)
+z3 <- g(x, x3)
+lines(x, z3, col = "BLUE")
+```
+
+
 
 \sectionbreak
 
